--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Alegreya:wght@500&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap');
 
 /* || RESET */
 
@@ -12,22 +13,26 @@
 /* || GENERAL STYLES */
 
 body {
-  font: 1.5rem "Nunito", sans-serif;
+  /* font: 1.5rem C sans-serif; */
+  font-family: "Merriweather";
+  font-size:medium;
+  text-align: center;
   min-height: 100vh;
   background-color: white;
   display: flex;
   flex-direction: column;
+  margin:10px;
 }
 
-header,
-nav,
-main,
-footer {
+
+
+header,nav,main,footer {
   display: grid;
   place-content: center;
   grid-template-columns: 100%;
   text-align: center;
 }
+
 
 .logoStyle {
   font-size: 30px;
@@ -45,6 +50,7 @@ header {
   min-height: 80px;
   font-size: 15px;
   z-index: 10;
+  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
 }
 
 nav {
@@ -52,8 +58,31 @@ nav {
   color: #000;
   padding: 0.5rem;
   border-bottom: 2px solid #000;
+  display: none;
   /*z-index: 10; */
 }
+
+/* Form Div Styling */
+.parentFormDiv{
+  display: grid; 
+  grid-template-columns: repeat(2,1fr) ;
+  gap: 50px !important; 
+}
+.childFormDiv{
+  
+  width:100%;
+}
+
+.contactFormImg{
+  display: block;
+ 
+}
+.contactFormImg > img{
+  width:50%;
+  height:50%;
+}
+
+
 
 /* Styling for cards compnent */
 
@@ -77,7 +106,6 @@ nav {
   background-color: rgb(0, 0, 0);
   width: 100%;
   height: 100%;
-  text-align: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -98,6 +126,10 @@ nav {
   opacity: 0.68;
 }
 
+/* .grid-container{
+  gap:10px;
+} */
+
 /* Main Styling */
 
 main {
@@ -106,7 +138,8 @@ main {
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 20px;
   padding: 20px;
-  text-align: justify;
+  
+  /* text-align: justify; */
 }
 
 /*main > div{
@@ -126,6 +159,12 @@ footer {
   text-align: justify;
   color: white;
   padding: 10px 20px;
+  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
+}
+
+.footer{
+  width: 100% !important;
+  /* position: absolute; */
 }
 
 .footerP {
@@ -156,7 +195,7 @@ footer {
 }
 
 .textBox {
-  width: 40%;
+  width: 80%;
 }
 
 /* || XS */
@@ -186,6 +225,7 @@ footer {
   }
   header {
     padding-top: 15px;
+    padding-bottom: 15px;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -195,17 +235,27 @@ footer {
     background-color: #fff;
     color: #000;
     padding: 0.5rem;
-    border-bottom: 2px solid #000;
+    /* border-bottom: 2px solid #000; */
+    display: none;
   }
 }
 
 /* || SMALL */
+@media screen and (max-width: 576px) {
+  .contactFormImg{
+    display: none !important;
+  }
 
+  .childFormDiv{
+    width: 100% !important;
+  }
+}
 @media screen and (min-width: 576px) {
   .logoStyle {
     font-size: 30px;
     text-align: center;
   }
+  
   header {
     font-size: 20px;
   }
@@ -225,6 +275,7 @@ footer {
   .textBox {
     width: 50%;
   }
+
 }
 
 /* || MEDIUM */
@@ -244,59 +295,83 @@ footer {
   .footerP {
     width: 50%;
   }
-  nav {
-    display: none;
-  }
   .carouselImage {
     height: 600px;
   }
   .grid-container {
     display: grid;
     gap: 10px;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+   
+  }
+
+  .cardimg {
+    width: 100%;
+    height: 350px !important;
+  
   }
   .textBox {
-    width: 40%;
+    width: 100%;
+  }
+
+  .parentTextBox{
+    width:700px
+  }
+
+  .parentFormDiv{
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    
+  }
+  .childFormDiv{
+    flex: 1;
+  }
+  .contactFormImg{
+    height:100%;
+    width:100%;
   }
 }
 
 /* || LARGE */
 
-@media screen and (min-width: 992px) {
+@media screen and (min-width:820px) {
   /*body {
     background-color: firebrick;
     background-image: radial-gradient(whitesmoke, firebrick)
   }*/
+
+
   footer {
     height: fit-content;
   }
   .footerP {
     width: 50%;
   }
-  nav {
-    display: none;
-  }
   .carouselImage {
     height: 700px;
   }
   main {
     width: 80vw;
+ 
     justify-items: center !important;
     align-items: center !important;
     margin: 0 auto;
   }
   .textBox {
-    width: 80%;
+    width: 100%;
   }
+
+
 }
 
 /* || XL  */
 
 @media screen and (min-width: 1200px) {
-  /*body {
-    background-color: rebeccapurple;
+  /* body {
+    background-color: rebeccapurple !important;
     background-image: radial-gradient(whitesmoke, rebeccapurple)
-  }*/
+  } */
   footer {
     display: flex;
     justify-content: space-between;
@@ -304,6 +379,11 @@ footer {
     color: white;
     padding: 10px 20px;
     height: fit-content;
+  }
+
+  .footer{
+    width: 100% !important;
+    position: absolute;
   }
   .footerP {
     width: 50%;
@@ -320,8 +400,11 @@ footer {
     align-items: center !important;
     margin: 0 auto;
   }
+  .parentTextBox{
+    width:100%;
+  }
   .textBox {
-    width: 80%;
+    width: 100%;
   }
 }
 
