--- a/src/index.css
+++ b/src/index.css
@@ -25,8 +25,7 @@ body {
 }
 
 
-
-header,nav,main,footer {
+header,main,footer {
   display: grid;
   place-content: center;
   grid-template-columns: 100%;
@@ -35,7 +34,9 @@ header,nav,main,footer {
 
 
 .logoStyle {
-  font-size: 30px;
+  font-size: 40px;
+  text-align: left;
+  margin:10px;
   font-family: "Alegreya";
 }
 
@@ -51,35 +52,6 @@ header {
   font-size: 15px;
   z-index: 10;
   box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
-}
-
-nav {
-  background-color: #2e86ab;
-  color: #000;
-  padding: 0.5rem;
-  border-bottom: 2px solid #000;
-  display: none;
-  /*z-index: 10; */
-}
-
-/* Form Div Styling */
-.parentFormDiv{
-  display: grid; 
-  grid-template-columns: repeat(2,1fr) ;
-  gap: 50px !important; 
-}
-.childFormDiv{
-  
-  width:100%;
-}
-
-.contactFormImg{
-  display: block;
- 
-}
-.contactFormImg > img{
-  width:50%;
-  height:50%;
 }
 
 
@@ -126,9 +98,6 @@ nav {
   opacity: 0.68;
 }
 
-/* .grid-container{
-  gap:10px;
-} */
 
 /* Main Styling */
 
@@ -138,17 +107,9 @@ main {
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 20px;
   padding: 20px;
-  
-  /* text-align: justify; */
 }
 
-/*main > div{
-  border: 1px solid #1E293B;
-  height: auto;
-}*/
-
 /* Footer Styling*/
-
 footer {
   bottom: 0;
   height: fit-content;
@@ -161,30 +122,27 @@ footer {
   padding: 10px 20px;
   box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
 }
-
 .footer{
   width: 100% !important;
-  /* position: absolute; */
+  position: absolute;
 }
-
 .footerP {
   width: 80%;
 }
-
 .footerLinks {
   color: white;
   font-size: 20px;
 }
 
-/* Carousel Styling */
 
+/* Carousel Styling */
 .carouselImage {
   width: 100%;
   height: 300px;
 }
 
-/* Form Styling */
 
+/* Form Styling */
 .parentTextBox {
   margin: 20px;
   display: flex;
@@ -193,18 +151,66 @@ footer {
   align-items: center;
   text-align: left;
 }
-
 .textBox {
-  width: 80%;
+  width: 100%;
 }
+.parentFormDiv{
+  display: grid ;
+  gap: 5% ;
+  grid-template-columns: 47.5% 47.5% ;
+  overflow: hidden ; 
+}
+.childFormDiv{
+  width: 100% ;
+}
+.imgFormstyle{
+  width: 100% ;
+  height:100%;
+}
+
+
+
+/* Max Width Media Queries */
+@media screen and (max-width: 820px) {
+  .parentFormDiv{
+    display: block ;
+    gap: 0% ;
+    grid-template-columns: none ;
+  }
+  .childFormDiv{
+    width: 100% ;
+  }
+  .imgFormstyle{
+    display: none;
+  }
+  
+}
+
+
+/* Scrolling Media Queries */
+@media screen and (max-width: 380px) {
+  .footer{
+    position:relative
+  }
+  main{
+    overflow-y: scroll;
+  }
+}
+@media screen and (max-height: 720px) {
+  .footer{
+    position:relative
+  }
+  main{
+    overflow-y: scroll;
+  }
+}
+
+
 
 /* || XS */
 
 @media screen and (max-width: 395px) {
-  .logoStyle {
-    font-size: 20px;
-    text-align: center;
-  }
+  
   footer {
     display: flex;
     flex-direction: column;
@@ -231,37 +237,16 @@ footer {
     justify-content: space-evenly;
     height: 85px;
   }
-  nav {
-    background-color: #fff;
-    color: #000;
-    padding: 0.5rem;
-    /* border-bottom: 2px solid #000; */
-    display: none;
-  }
+  
 }
 
 /* || SMALL */
-@media screen and (max-width: 576px) {
-  .contactFormImg{
-    display: none !important;
-  }
-
-  .childFormDiv{
-    width: 100% !important;
-  }
-}
 @media screen and (min-width: 576px) {
-  .logoStyle {
-    font-size: 30px;
-    text-align: center;
-  }
-  
+ 
   header {
     font-size: 20px;
   }
-  nav {
-    display: none;
-  }
+  
   footer {
     height: fit-content;
     padding-bottom: 0;
@@ -285,16 +270,8 @@ footer {
     background-color: gold;
     background-image: radial-gradient(whitesmoke, gold)
   }*/
-  .logoStyle {
-    font-size: 55px;
-    text-align: center;
-  }
-  footer {
-    height: fit-content;
-  }
-  .footerP {
-    width: 50%;
-  }
+  
+
   .carouselImage {
     height: 600px;
   }
@@ -304,32 +281,10 @@ footer {
     grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
    
   }
-
   .cardimg {
     width: 100%;
     height: 350px !important;
   
-  }
-  .textBox {
-    width: 100%;
-  }
-
-  .parentTextBox{
-    width:700px
-  }
-
-  .parentFormDiv{
-    display: flex;
-    flex-direction: row;
-    gap: 10px;
-    
-  }
-  .childFormDiv{
-    flex: 1;
-  }
-  .contactFormImg{
-    height:100%;
-    width:100%;
   }
 }
 
@@ -341,27 +296,21 @@ footer {
     background-image: radial-gradient(whitesmoke, firebrick)
   }*/
 
-
-  footer {
-    height: fit-content;
-  }
-  .footerP {
-    width: 50%;
-  }
   .carouselImage {
     height: 700px;
   }
   main {
     width: 80vw;
- 
     justify-items: center !important;
     align-items: center !important;
     margin: 0 auto;
   }
-  .textBox {
-    width: 100%;
+  .parentFormDiv{
+    min-width: 500px;
   }
-
+  .textBox{
+    min-width: 100%;
+  }
 
 }
 
@@ -381,16 +330,6 @@ footer {
     height: fit-content;
   }
 
-  .footer{
-    width: 100% !important;
-    position: absolute;
-  }
-  .footerP {
-    width: 50%;
-  }
-  nav {
-    display: none;
-  }
   .carouselImage {
     height: 800px;
   }
@@ -400,12 +339,7 @@ footer {
     align-items: center !important;
     margin: 0 auto;
   }
-  .parentTextBox{
-    width:100%;
-  }
-  .textBox {
-    width: 100%;
-  }
+
 }
 
 /* || MOBILE DEVICE LANDSCAPE  */
@@ -419,7 +353,5 @@ footer {
   h2 {
     font-size: 1.5rem;
   }
-  nav {
-    display: none;
-  }
+  
 }
